[package]

name = "gol-rust"
version = "0.0.1"
authors = ["Tony Lukasavage <anthony.lukasavage@gmail.com>"]

[dependencies.pistoncore-sdl2_window]

git = "https://github.com/pistondevelopers/sdl2_window"

[dependencies.pistoncore-event]

git = "https://github.com/pistondevelopers/event"

# [dependencies.piston2d-sprite]

# git = "https://github.com/pistondevelopers/sprite"

[dependencies.piston2d-opengl_graphics]

git = "https://github.com/pistondevelopers/opengl_graphics"